fix: remove scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   #goo-svg {
-    height: 100%;
+    height: 100vh;
     min-height: 600px;
     overflow: hidden;
     width: 175px;
